# YSU-radio-association2026

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  eng.md  et HEAD~1  package-lock.json  package.json
backend/: app.py  pyproject.toml
backend/config/: database.py
backend/models/: association.py  competition.py  department.py  honor.py  membership_application.py  training.py
backend/routes/: association.py  competitions.py  departments.py  honors.py  membership_applications.py  recruitment_officers.py  trainings.py
backend/utils/: security.py
backup/vue-source/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/: RECRUITMENT_OPERATIONS.md  ops-plan.md
docs/adr/: 0001-membership-application-identifier.md  0002-recruitment-officer-identifier.md
public/: competition-activities.html  departments.html  honors.html  recreational-activities.html
public/html/: about-association-detail.css  about-association-detail.html  about-association.css  about-association.html  about-association.js  activities.html  admin-login.html  admission.html  common.js  competition-activities.html  data.js  departments.html  home-effects.js  honors.html  index.html  membership-application.html  membership-applications.html  recreational-activities.html  registration-info.html  registration.html  site-intro.css  site-intro.js  styles.css  trainings.html
scripts/: collect-server-info.sh  deploy.sh  export-admissions.js  hash-password.py  init-db.js
server/: app.js  initDB.js
server/config/: database.js  settings.js
(+33 files in other folders)
