[project]
name = "radio-association-backend"
version = "1.0.0"
description = "燕山大学无线电爱好者协会 FastAPI 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[tool.uv]
package = false
